deploy/manifests/ship-commander.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/vcs-url: https://github.com/rhdemo/2021-shipcommander.git
    app.quarkus.io/build-timestamp: 2021-02-04 - 15:17:14 +0000
    app.quarkus.io/commit-id: 6ede90dbe4799c10ed7036053485e27d756e7006
  labels:
    app.kubernetes.io/name: ship-commander
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: ship-commander
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: ship-commander
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ship-commander
  namespace: pacman-app
  labels:
    app.kubernetes.io/name: ship-commander
spec:
  path: "/"
  to:
    kind: Service
    name: ship-commander
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/vcs-url: https://github.com/rhdemo/2021-shipcommander.git
    app.quarkus.io/build-timestamp: 2021-02-04 - 15:17:14 +0000
    app.quarkus.io/commit-id: 6ede90dbe4799c10ed7036053485e27d756e7006
  labels:
    app.kubernetes.io/name: ship-commander
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: ship-commander
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ship-commander
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.quarkus.io/vcs-url: https://github.com/rhdemo/2021-shipcommander.git
        app.quarkus.io/build-timestamp: 2021-02-04 - 15:17:14 +0000
        app.quarkus.io/commit-id: 6ede90dbe4799c10ed7036053485e27d756e7006
      labels:
        app.kubernetes.io/name: ship-commander
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
    spec:
      containers:
      - args:
        - -jar
        - /deployments/ship-commander-1.0.0-SNAPSHOT-runner.jar
        - -cp
        - /deployments/lib/io.quarkus.quarkus-security-runtime-spi-1.11.1.Final.jar:/deployments/lib/io.quarkus.quarkus-vertx-http-dev-console-runtime-spi-1.11.1.Final.jar:/deployments/lib/org.reactivestreams.reactive-streams-1.0.3.jar:/deployments/lib/io.smallrye.reactive.mutiny-0.12.5.jar:/deployments/lib/io.quarkus.security.quarkus-security-1.1.3.Final.jar:/deployments/lib/io.netty.netty-codec-4.1.49.Final.jar:/deployments/lib/io.netty.netty-handler-4.1.49.Final.jar:/deployments/lib/io.quarku [...]
        - -Dquarkus.http.host=0.0.0.0
        - -Djava.util.logging.manager=org.jboss.logmanager.LogManager
        command:
        - java
        image: sblanc/ship-commander:1.0.0-SNAPSHOT
        imagePullPolicy: Always
        name: ship-commander
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
